# stm32f407-V3

./: .gitignore  README.md
00-config/: Cargo.toml  build.rs
00-config/.cargo/: config.toml
01-tutorial/: Cargo.toml
01-tutorial/src/peripherals/: beep.rs  key.rs  led.rs  mod.rs
