[package]
name = "config"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core", "inline-asm"] }
cortex-m-rt = "0.7.5"
defmt = "1.0.1"
defmt-rtt = "1.1.0"
embassy-executor = { version = "0.9.1", features = ["arch-cortex-m", "defmt", "executor-thread"] }
embassy-stm32 = { version = "0.4.0", features = ["stm32f407zg", "time-driver-any", "exti", "defmt", "memory-x"] }
embassy-time = { version = "0.5.0", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

[[bin]]
name = "config"
test = false
bench = false