[package]
name = "tutorial"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core", "inline-asm"] }
cortex-m-rt = "0.7.5"
defmt = "1.0.1"
defmt-rtt = "1.1.0"
embassy-executor = { version = "0.9.1", features = ["arch-cortex-m", "executor-thread", "defmt"] }
embassy-hal-internal = "0.4.0"
embassy-stm32 = { version = "0.5.0", features = ["stm32f407zg", "time-driver-any", "exti", "defmt", "memory-x"] }
embassy-sync = "0.7.2"
embassy-time = { version = "0.5.0", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

[[bin]]
name = "blink"
path = "src/bin/t_00_blink.rs"
test = false

[[bin]]
name = "led"
path = "src/bin/t_01_led.rs"
test = false

[[bin]]
name = "beep"
path = "src/bin/t_02_beep.rs"
test = false

[[bin]]
name = "key"
path = "src/bin/t_03_key.rs"
test = false

[[bin]]
name = "exti"
path = "src/bin/t_04_exti.rs"
test = false

[[bin]]
name = "exti_task"
path = "src/bin/t_04_exti_task.rs"
test = false
